# GameOfLife

./: .buildinfo  .coverage  .pre-commit-config.yaml  README.md  gameoflife.html  genindex.html  index.html  lint_script.html  lint_script.py  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  gameoflife.doctree  index.doctree  lint_script.doctree  modules.doctree
.github/workflows/: ci.yml  gh-pages.yml  release.yml
_sources/: lint_script.rst.txt  modules.rst.txt
_static/: documentation_options.js
docs/tutorials/: tutorial.md
examples/: 3enginecordershipgun.cells  backrake.cells  superfountain.cells
gameoflife/: .coverage  empty.cells  life.py  life_test.py  test.cells  test_life.py
source/: conf.py  gameoflife.rst  index.rst
