[tool.poetry]
name = "gameoflife"
version = "1.1.0"
description = "A Python implementation of the Game of Life, a cellular automaton devised by John Conway"
authors = ["Eric Burnett <ericburnett@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pygame = "*"


repository = "https://github.com/rlc26/GameOfLife"
main file = "https://github.com/rlc26/GameOfLife/game-of-life/life.py" 
test file = "https://github.com/rlc26/GameOfLife/game-of-life/test_life.py" 
keywords = ["game of life", "conway", "cellular automaton", "simulation"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "lint_script:main"
test = "pytest:main"

