[tool.poetry]
name = "gameoflife"
version = "1.1.0"
description = "A Python implementation of the Game of Life, a cellular automaton devised by John Conway"
authors = ["Eric Burnett <ericburnett@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/rlc26/GameOfLife"
keywords = ["game of life", "conway", "cellular automaton", "simulation"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pygame = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
pylint = "^3.3.2"
sphinx = "<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "lint_script:main"
test = "pytest:main"
